--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,6 @@
+@import '@vue-flow/core/dist/style.css';
+@import '@vue-flow/core/dist/theme-default.css';
+
 html {
     overflow-y: hidden !important;
     font-size: 16px;
