--- a/src/main.css
+++ b/src/main.css
@@ -2,3 +2,23 @@ html {
     overflow-y: hidden !important;
     font-size: 16px;
 }
+
+.ProseMirror {
+    height: 100%;
+}
+
+.ProseMirror p.is-editor-empty:first-child::before {
+    content: attr(data-placeholder);
+    float: left;
+    color: #adb5bd;
+    pointer-events: none;
+    height: 0;
+}
+
+.ProseMirror .is-empty::before {
+    content: attr(data-placeholder);
+    float: left;
+    color: #ced4da;
+    pointer-events: none;
+    height: 0;
+}
